Create basic structure of the webpage.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
     <script src="index.js" defer></script>
     <title>Tic-Tac-Toe</title>
   </head>
-  <body></body>
+  <body>
+    <header><h1>TIC-TAC-TOE</h1></header>
+    <section>
+      <div id="gameBoard"></div>
+    </section>
+    <aside>
+      <div id="scores">
+        <p>
+          Player 1: <br />
+          Player 2:
+        </p>
+      </div>
+      <button id="playRound">Play Round</button>
+    </aside>
+  </body>
 </html>
