Store player data and add event listeners to each cell

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <header>
         <h1>TIC-TAC-TOE</h1>
         <section>
-          <form action="">
+          <form id="myForm">
             <input type="text" placeholder="Player Name X" id="X" />
             <input type="text" placeholder="Player Name O" id="O" />
           </form>
-          <button id="playGame">Play Game</button>
+          <button id="playGame" type="submit">Play Game</button>
           <button id="resetGame">Reset Game</button>
         </section>
       </header>
