--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
         <h1>TIC-TAC-TOE</h1>
         <section>
           <form id="myForm">
-            <input type="text" placeholder="Player Name X" id="X" />
-            <input type="text" placeholder="Player Name O" id="O" />
+            <input
+              type="text"
+              placeholder="Player Name X"
+              id="X"
+              class="inputs" />
+            <input
+              type="text"
+              placeholder="Player Name O"
+              id="O"
+              class="inputs" />
           </form>
           <button id="playGame" type="submit">Play Game</button>
           <button id="resetGame">Reset Game</button>
